<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/borrowed_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_selectable_background">

    <!-- about -->
    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_primary_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/label_signature"/>

    <!-- signature -->
    <TextView
        android:id="@+id/label_signature"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/account_borrowed_signature"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signature"/>

    <TextView
        android:id="@+id/signature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintStart_toEndOf="@+id/label_signature"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- duedate -->
    <TextView
        android:id="@+id/label_duedate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/account_borrowed_duedate"
        app:layout_constraintTop_toBottomOf="@+id/label_signature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/duedate"/>

    <TextView
        android:id="@+id/duedate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintTop_toBottomOf="@+id/signature"
        app:layout_constraintStart_toEndOf="@+id/label_duedate"
        app:layout_constraintEnd_toStartOf="@id/duedate_warning" />

    <ImageView
        android:id="@+id/duedate_warning"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/signature"
        app:layout_constraintStart_toEndOf="@+id/duedate"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- queue -->
    <TextView
        android:id="@+id/label_queue"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/account_borrowed_queue"
        app:layout_constraintTop_toBottomOf="@+id/label_duedate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/queue"/>

    <TextView
        android:id="@+id/queue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintTop_toBottomOf="@+id/duedate"
        app:layout_constraintStart_toEndOf="@+id/label_queue"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- renewals -->
    <TextView
        android:id="@+id/label_renewals"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/account_borrowed_renewals"
        app:layout_constraintTop_toBottomOf="@+id/label_queue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/renewals"/>

    <TextView
        android:id="@+id/renewals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintTop_toBottomOf="@+id/queue"
        app:layout_constraintStart_toEndOf="@+id/label_renewals"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- status -->
    <TextView
        android:id="@+id/label_status"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/account_borrowed_status"
        app:layout_constraintTop_toBottomOf="@+id/label_renewals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/status"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/list_secondary_text_size"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintTop_toBottomOf="@+id/renewals"
        app:layout_constraintStart_toEndOf="@+id/label_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>