<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/mods_none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mods_none_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_centerInParent="true"
            android:src="@drawable/book_gradient"/>

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="400dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/mods_none_image"
            android:layout_centerInParent="true"
            android:text="@string/detail_select"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/typo_title_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mods_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:maxWidth="90dp"
                android:scaleType="fitStart" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/list_primary_text_size"
                    android:textColor="@android:color/primary_text_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <TextView android:id="@+id/sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/list_secondary_text_size"
                    android:textColor="@android:color/tertiary_text_light"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:layout_marginBottom="5dp"/>

                <ProgressBar
                    android:id="@+id/unapi_progressbar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/author_extended"
                    android:textSize="@dimen/list_secondary_text_size"
                    android:textColor="@android:color/secondary_text_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/index_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:background="@color/list_alternate"
                android:padding="8dp"
                android:text="@string/detail_index"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/interlanding_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:background="@color/list_alternate"
                android:padding="8dp"
                android:text="@string/detail_interlending"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/detail_available"
                android:layout_marginBottom="3dp"/>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/divider"/>

            <include
                android:id="@+id/list"
                layout="@layout/include_list" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>